<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.dfki.sds</groupId>
    <artifactId>leechcrawler</artifactId>
    <version>2.5.0</version>
    <packaging>jar</packaging>
    <name>leechcrawler</name>
    <url>http://github.com/dfki/leechcrawler</url>

    <developers>
        <developer>
            <name>Christian Reuschling</name>
            <email>reuschling@dfki.uni-kl.de</email>
            <organization>DFKI, SDS department</organization>
            <organizationUrl>https://www.dfki.de/en/web/research/research-departments/smart-data-knowledge-services/</organizationUrl>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <additionalparam>-Xdoclint:none</additionalparam>
    </properties>


    <distributionManagement>
        <repository>
            <id>artifactory-libs-releases-local</id>
            <url>https://www.dfki.uni-kl.de/artifactory/libs-releases-local</url>
        </repository>
        <snapshotRepository>
            <id>artifactory-libs-snapshots-local</id>
            <url>https://www.dfki.uni-kl.de/artifactory/libs-snapshots-local</url>
        </snapshotRepository>
    </distributionManagement>


    <repositories>
        <repository>
            <id>artifactory-libs-releases</id>
            <url>https://www.dfki.uni-kl.de/artifactory/libs-releases</url>
        </repository>
        <repository>
            <id>artifactory-libs-snapshots</id>
            <url>https://www.dfki.uni-kl.de/artifactory/libs-snapshots</url>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>


        <!--        Apache Tika-->

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>2.5.0</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <!--                        <artifactId>tika-parsers</artifactId>-->
            <!--                        <version>1.27</version>-->
            <artifactId>tika-parsers-standard-package</artifactId>
            <version>2.5.0</version>
            <exclusions>
                <exclusion>
                    <artifactId>xml-apis</artifactId>
                    <groupId>xml-apis</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>log4j-core</artifactId>
                    <groupId>org.apache.logging.log4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>log4j-api</artifactId>
                    <groupId>org.apache.logging.log4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>log4j-slf4j-impl</artifactId>
                    <groupId>org.apache.logging.log4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jcl-over-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.github.jai-imageio</groupId>
            <artifactId>jai-imageio-jpeg2000</artifactId>
            <version>1.4.0</version>
        </dependency>
        <!--        Apache Tika-->


        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>6.4.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analyzers-common</artifactId>
            <version>6.4.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queryparser</artifactId>
            <version>6.4.2</version>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>info.bliki.wiki</groupId>
            <artifactId>bliki-core</artifactId>
            <!--            <version>3.0.19</version>-->
            <version>3.1.0</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-compress</artifactId>
                    <groupId>org.apache.commons</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>


        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>


        <dependency>
            <groupId>org.mapdb</groupId>
            <artifactId>mapdb</artifactId>
            <version>3.0.8</version>
        </dependency>

        <dependency>
            <groupId>com.cedarsoftware</groupId>
            <artifactId>json-io</artifactId>
            <!--            <version>2.9.3</version>-->
            <version>4.13.0</version>
            <!--            <version>4.12.0</version>-->
            <!--            <version>4.9.12</version>-->
            <!--            <version>4.1.10</version>-->
            <!--            <version>4.4.0</version>-->
        </dependency>


        <dependency>
            <groupId>de.dfki.sds</groupId>
            <artifactId>inquisitor</artifactId>
            <version>23_6-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-solrj</artifactId>
            <version>5.2.1</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.6.0</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>


        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>fluent-hc</artifactId>
            <version>4.5.13</version>
        </dependency>



        <!-- logback -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <!-- ab 1.2.9 gibt es keinen groovy-config file support mehr-->
            <version>1.2.8</version>

        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>2.4.13</version>
        </dependency>
        <!-- logback -->

    </dependencies>


    <build>

        <plugins>


            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>2.1.0</version>
                <configuration>
                    <assembleDirectory>${project.build.directory}/assembleDir</assembleDirectory>
                    <extraJvmArguments>-Xmx5G --add-opens java.base/java.lang=ALL-UNNAMED</extraJvmArguments>
                    <binFolder>/bin</binFolder>
                    <repositoryName>lib</repositoryName>
                    <repositoryLayout>flat</repositoryLayout>
                    <useWildcardClassPath>true</useWildcardClassPath>
                    <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>


                    <binFileExtensions>
                        <unix>.sh</unix>
                    </binFileExtensions>
                    <programs>
                        <program>
                            <mainClass>de.dfki.km.leech.lucene.LuceneIndexCreator</mainClass>
                            <name>createLuceneIndex</name>
                        </program>
                        <program>
                            <mainClass>de.dfki.km.leech.solr.SolrIndexCreator</mainClass>
                            <name>createSolrIndex</name>
                        </program>
                        <program>
                            <mainClass>de.dfki.km.leech.Leech</mainClass>
                            <name>leechcrawler</name>
                        </program>

                    </programs>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>


        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${maven.compiler.encoding}</encoding>

                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.3</version>
                    <configuration>
                        <descriptors>
                            <descriptor>src/main/assembly/distributable.xml</descriptor>
                        </descriptors>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


    <profiles>

        <profile>
            <id>disable-java8-doclint</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <additionalparam>-Xdoclint:none</additionalparam>
            </properties>
        </profile>

    </profiles>


</project>
